# ToDo_App_Graphical

./: .gitignore  CMakeLists.txt
include/: add.hpp  add_to_file.hpp  add_to_vec.hpp  move_done_to_end.hpp  read_file.hpp  task.hpp  write_file.hpp
src/: add.cpp  add_to_file.cpp  add_to_vec.cpp  app.cpp  main.cpp  move_done_to_end.cpp  read_file.cpp  task.cpp  write_file.cpp
